# structlog_config

./: .copier-answers.yml  CHANGELOG.md  README.md  copier.yml  pyproject.toml
.github/workflows/: build_and_publish.yml
structlog_config/: __init__.py  constants.py  environments.py  fastapi_access_logger.py  formatters.py  stdlib_logging.py
tests/: test_logging.py  utils.py
